2012-12-19 Max Baak <mbaak@cern.ch>
	M       python/configManager.py
	M       python/sample.py
	* Option to replace channel systematics from that of different channel

2012-12-19 David Cote <david.cote@cern.ch>
	* Tagged HistFitter-00-00-22

2012-12-17  Zach Marshall <zach.marshall@cern.ch>
	* src/HypoTestTool.cxx: Adding some helpful debugging output
	* src/Utils: Moving to folder-based plots
	* macros/contours: Adding python-based plotting macros
 
2012-12-14 David Cote <david.cote@cern.ch>
	* Added configurable HypoTestName with syntax: myFitConfig.hypoTestName="MyName_200_100"
	* Bug fix in construction fitChannels string of GenerateFitAndPlot function in Utils.cxx

2012-12-14 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* python/sample.py: throw a warning for sample names starting with digits.
	For signal samples starting with a digit, HistFactory misses parameters in
	the workspace for unknown reasons. 

2012-12-11 Alex Koutsman <alex.koutsman@cern.ch>
	   * scripts/HistFitter.py : added -m/--minos option that must be run with an argument, either "ALL" or a space separate string of parameters
	   * src/Utils.cxx : added minos error calculation
	   * src/Utils.h : added minos error calculation

2012-15-10 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* scripts/HistFitter.py: allow nargs="+" for args.configFile, so that user
	can access e.g. sys.argv[-1] themselves - this was not allowed due to
	strict number of args checking by argparse

2012-15-05 Max Baak <mbaak@cern.ch>
	M python/systematic.py
        * Another fix needed for case below where treeName would be improperly set
        M python/sample.py 
        M src/Utils.cxx
	* converted two warning statements into info.
	* Tagged as HistFitter-00-00-21-01

2012-12-05 Alex Koutsman <alex.koutsman@cern.ch>
	* scripts/YieldsTableTex.py: negative errors on yields are now automatically truncated in case they are larger than the central bkg value
	* Tagging HistFitter-00-00-21
