@@ -1,3 +1,11 @@
+2012-12-19 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
+	* scripts/HistFitter.py: argparse.Action classes for arguments using
+	nargs, to prevent eating the configFile. argparse.Action class for the
+	configFile to prevent it then overwriting the proper setting with None.
+	* python/configManager.py: introduction of runOnlyNominalXSec: for
+	fixSigXSec=True, run only the nominal fit instead of up and down
+	* src/configMgr.cxx: idem
+
 2012-12-19 Max Baak <mbaak@cern.ch>
 	M       python/configManager.py
 	M       python/sample.py
